syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Blank {}

message Categoria {
    string id = 1;
    string nome = 2;
    string descricao = 3;
}

message CreateCategoria {
    string nome = 1;
    string descricao = 2;
}

message ListaDeCategorias {
    repeated Categoria categoria = 1;
}

service CategoriaService {
    rpc CriarCategoria (CreateCategoria) returns (Categoria) {};
    rpc ListaCategorias (Blank) returns (ListaDeCategorias);
}


